notifyservice/db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db-not-serv
  namespace: notify-service-ns
spec:
  replicas: 1
  serviceName: "db-svc"
  selector:
    matchLabels:
      app: db
    template:
     metadata:
       labels:
         app: db 
    spec:
       
      volumeClaimTemplate:
        - metadata:
            name: db-data
          spec:
            accessModes: ["ReadWriteOnce"]
            resources:
              requests:
                storage: 2Gi

      containers:

      - name: db
        image: postgres15
        ports:
        - containerPort: 5432

        volumeMounts:
        - name: db-data
          mountPath: /var/lib/postgresql/data
          
        resources:
          requests:
            cpu:
            memory:
          limits:
            cpu:
            requests:
