notifyservice/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-not-serv
  namespace: notify-service-ns
spec:
  replicas: 2
  
  selector:
    matchLabels:
      app: backend
    template:
      metadata:
        labels:
          app: backend
    spec:
      containers:
      - name: backend
        image: registry.interno/notify-service:1.4.2
        ports:
        - containerPort: 8080
      
      resources:
        limits:
          cpu:
          memory:
        requests:
          cpu:
          memory:
