notifyservice/serviceback.yaml
apiVersion: v1
kind: Service
metadata:
  name:
  namespace:
spec:
  type: Nodeport
  selector:
    app: db-not-serv
  ports:
  - port: 8080
    targetPort: 808
