notifyservice/servicedb.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-svc
  namespace: notify-service-ns
spec:
  clusterIP: None
  selector:
    app: db-not-serv
  ports:
  - port: 5432
    targetPort: 5432
