notifyservice/networkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpol1
  namespace: notify-service-ns
spec:
  podSelector:
    matchLabels:
      app: db
  policyTypes:
  - Ingress

  Ingress:
  - from:
    - podSelector:
        matchLabels:
          app: backend
    ports:
    - protocol: TCP
      ports: 5432
